--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #79edbd;
+  background-color: #6dcf8b;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -27,7 +27,7 @@
 .Title{
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   font-size: 60px;
-  margin-top: -200px;
+  margin-top: -30px;
 }
 
 .arrow1{
@@ -41,30 +41,71 @@
 }
 .arrow2{
   width: 50px;
-  margin-top: -100px;
+  margin-top: -160px;
 }
 .arrow3{
   width: 50px;
+  margin-top: 60px;
 }
 .arrow4{
   width: 50px;
   margin-left: 200px;
-  margin-top: -100px;
+  margin-top: -160px;
 }
 .arrow5{
   width: 50px;
   margin-left: 200px;
+  margin-top: 55px;
 }
 .jam{
   width: 50px;
 }
 .startbutton{
   padding: 10px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 30px;
+  padding-right: 30px;
   margin-top: 50px;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   font-size: 30px;
   border: none;
   background-color: lightgray;
+}
+
+.boom{
+  text-align: center;
+}
+
+.hour{
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: 50px;
+}
+
+.resetbutton{
+  padding: 10px;
+  padding-left: 30px;
+  padding-right: 30px;
+  margin-top: 20px;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: 30px;
+  border: none;
+  background-color: rgb(243, 50, 50);
+}
+
+.pausebutton{
+  padding: 10px;
+  padding-left: 30px;
+  padding-right: 30px;
+  margin-top: 20px;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: 30px;
+  border: none;
+  background-color: wheat;
+}
+
+.boom{
+  margin-bottom: -60px;
+}
+
+.boom2{
+  font-size: 50px;
 }
